# immutable_string

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
include/immutable_string/: string.hpp
unittests/: CMakeLists.txt  allocator_with_count.hpp  stringtest.cpp
